# gyatt

./: .SRCINFO  .gitignore  .gyattignore  AUR_SUBMISSION.md  CMakeLists.txt  HTTP_OPTIMIZATION_REPORT.md  Makefile  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_REPORT.md  PKGBUILD  README.md  README.md.bak  ROADMAP.md  _home_trashhpandaaaa_Documents_Code_Cpp_gyatt_._TODO_feature_login.md  benchmark.sh  benchmark_github_push.sh  gyatt  gyatt_debug  gyatt_test.sh  test.txt  test1.txt  test_aliases.txt  test_client  test_client.c  test_compression.sh  test_final_optimization.sh  test_fix.txt  test_github_integration.sh  test_github_simulation  test_http_debug.cpp  test_http_optimization  test_http_simple  test_http_simple.cpp  test_ipfs.c  test_memory_optimization.cpp  test_parallel_performance  test_parallel_performance.cpp  test_performance_complete  test_performance_complete.cpp  tests.sh
.gyatt/: config  index  index.backup
docs/: IPFS_INTEGRATION.md
include/: advanced_compression.h  advanced_features.h  checkpoint_system.h  commit.h  enhanced_features.h  guardrails.h  http_optimization.h  ignore.h  index.h  markdown_commit.h  memory_optimization.h  object.h  performance_engine.h  plugin_system.h  project_mapper.h  repository.h  section_staging.h  semantic_branching.h  terminal_ui.h  utils.h
src/: advanced_compression.cpp  advanced_features.cpp  buffer.c  buffer.h  checkpoint_system.cpp  commit.cpp  enhanced_features.cpp  guardrails.cpp  gyatt.h  hash.c  hash.h  http_optimization.cpp  ignore.cpp  index.c  index.cpp  index.h  main.c  main.cpp  markdown_commit.cpp  (+14 more)
(+227 files in other folders)
